--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1>Manual Hieroglyph Stacking With Tables</h1>
     <p>Testing manual Unicode hieroglyph stacking in Html<p> 
     
-    <table border="0">
+    <table class="hierotable">
       <tr>
         <td style="font-size:32px;">𓂋</td>
         <td rowspan="3" style="font-size:96px;">𓆳</td>
