--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>[Project Here]</title>
+<title>[Mdc2Html]</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
@@ -46,7 +46,7 @@
     <h1>Manual Hieroglyph Stacking With Tables</h1>
     <p>Testing manual Unicode hieroglyph stacking in Html<p> 
     
-    <table class="hierotable">
+    <table class="tablehiero">
       <tr>
         <td style="font-size:32px;">𓂋</td>
         <td rowspan="3" style="font-size:96px;">𓆳</td>
