--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     
     <table class="tablehiero">
       <tr>
-        <td style="font-size:32px;">𓂋</td>
-        <td rowspan="3" style="font-size:96px;">𓆳</td>
+        <td><div class="hiero1">𓂋</div></td>
+        <td rowspan="3"><div class="hiero3">𓆳</div></td>
       </tr>
       <tr>
-        <td style="font-size:32px;"> 𓈖 </td>
+        <td><div class="hiero1"> 𓈖 </div></td>
       </tr>
       <tr>
-        <td style="font-size:32px;">𓊪</td>
+        <td><div class="hiero1">𓊪</div></td>
       </tr>
       
     </table>
