--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
       <tr>
         <td><div class="hiero1">𓂋</div></td>
         <td rowspan="3"><div class="hiero3">𓆳</div></td>
+        <td><div class="hiero1">𓏏</div></td>
+        <td rowspan="3"><div class="hiero3"> 𓆐 </div></td>
       </tr>
       <tr>
         <td><div class="hiero1"> 𓈖 </div></td>
+        <td><div class="hiero1"> 𓏥  </div></td>
       </tr>
       <tr>
         <td><div class="hiero1">𓊪</div></td>
